tests/semantica/valid/skip/test1.ctds
program 
	{
        void main(){
            integer x = 0;
            x = 0;
            ;
        }
    }