tests/semantica/invalid/declaracion/test3.ctds
program
	{
		integer x = true;

		void main(){
			
		}
	}